# rssfetcher-python

./: Dockerfile  README.md  conf.example.yml  config.dev.yml  justfile  pyproject.toml  requirements.txt  rssfetcher.py
rssfetcher/: __init__.py  __main__.py  _utils.py  cfg.py  core.py  models.py  server.py  settings.py  stores.py
tests/: test_fetch_feed.py  test_store.py
